// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ContactDetails with data 1`] = `
<DocumentFragment>
  <div
    data-testid="form"
  >
    <div
      data-testid="email"
    />
    <div
      data-testid="phone"
    />
    <div
      data-testid="fax"
    />
    <div
      data-testid="website"
    />
    <div
      data-testid="social-media"
    />
    <div
      data-testid="form-field"
    >
      <div
        data-testid="dropdown-button"
      >
        <button
          type="button"
        >
          sulu_admin.add
        </button>
        <button
          type="button"
        >
          sulu_contact.email
        </button>
        <button
          type="button"
        >
          sulu_contact.phone
        </button>
        <button
          type="button"
        >
          sulu_contact.fax
        </button>
        <button
          type="button"
        >
          sulu_contact.website
        </button>
        <button
          type="button"
        >
          sulu_contact.social_media
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render empty ContactDetails 1`] = `
<DocumentFragment>
  <div
    data-testid="form"
  >
    <div
      data-testid="email"
    />
    <div
      data-testid="phone"
    />
    <div
      data-testid="form-field"
    >
      <div
        data-testid="dropdown-button"
      >
        <button
          type="button"
        >
          sulu_admin.add
        </button>
        <button
          type="button"
        >
          sulu_contact.email
        </button>
        <button
          type="button"
        >
          sulu_contact.phone
        </button>
        <button
          type="button"
        >
          sulu_contact.fax
        </button>
        <button
          type="button"
        >
          sulu_contact.website
        </button>
        <button
          type="button"
        >
          sulu_contact.social_media
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render empty phone and email fields even if other values are set 1`] = `
<DocumentFragment>
  <div
    data-testid="form"
  >
    <div
      data-testid="email"
    />
    <div
      data-testid="phone"
    />
    <div
      data-testid="fax"
    />
    <div
      data-testid="website"
    />
    <div
      data-testid="social-media"
    />
    <div
      data-testid="form-field"
    >
      <div
        data-testid="dropdown-button"
      >
        <button
          type="button"
        >
          sulu_admin.add
        </button>
        <button
          type="button"
        >
          sulu_contact.email
        </button>
        <button
          type="button"
        >
          sulu_contact.phone
        </button>
        <button
          type="button"
        >
          sulu_contact.fax
        </button>
        <button
          type="button"
        >
          sulu_contact.website
        </button>
        <button
          type="button"
        >
          sulu_contact.social_media
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
